Overlap Bug Fix Done

--- a/docroot/sites/all/themes/opensource/css/styles.css
+++ b/docroot/sites/all/themes/opensource/css/styles.css
@@ -1985,9 +1985,6 @@ p br {
 .section-open-organization.page-taxonomy .panel-panel.burr-flipped-content .panel-panel-inner .view-channel-articles .views-row.views-row-1 {
   padding-top: 0px !important;
 }
-.section-open-organization.page-taxonomy .panel-panel.burr-flipped-content .panel-panel-inner .view-channel-articles .views-row.views-row-1 .views-field-title {
-  margin-top: -6px;
-}
 .section-open-organization.page-taxonomy .panel-panel.burr-flipped-content .panel-panel-inner .view-channel-articles .views-field-field-lead-image {
   float: left;
 }
