--- a/docroot/sites/all/themes/opensource/sass/components/_openorgpage.scss
+++ b/docroot/sites/all/themes/opensource/sass/components/_openorgpage.scss
@@ -74,10 +74,6 @@
   .views-row.views-row-1
   {
         padding-top:0px !important;
-        .views-field-title
-        {
-          margin-top:-6px;
-        }
   }
   .views-field-field-lead-image
   {
